tests/NormalTests/paczka1/fuzzy1/42102877.err
Error in line 1: cI6Z S752 30,8
Error in line 5: cI6Z A887 76,8
Error in line 11: fxGhl S752 6,5
Error in line 15: 8DRPBLVh A887 10,3
Error in line 17: 8DRPBLVh A853 73,7
Error in line 10: 6JJXH A440 13,0
Error in line 26: 6JJXH A853 68,0
Error in line 23: WVoDL1 A887 24,0
Error in line 35: WVoDL1 A853 46,6
Error in line 36: S752 A853 22,1
